--- a/requirements.txt
+++ b/requirements.txt
@@ -1,157 +1,6 @@
-absl-py==2.1.0
-anyio==4.6.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==24.2.0
-audioread==3.0.1
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-bokeh==3.6.0
-cachetools==5.5.0
-catboost==1.2.7
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.0
-cycler==0.12.1
-debugpy==1.8.7
-decorator==5.1.1
-defusedxml==0.7.1
-exceptiongroup==1.2.2
-executing==2.1.0
-fastjsonschema==2.20.0
-flatbuffers==24.3.25
-fonttools==4.54.1
-fqdn==1.5.1
-gast==0.4.0
-google-auth==2.35.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-graphviz==0.20.3
-grpcio==1.66.2
-h11==0.14.0
-h5py==3.7.0
-httpcore==1.0.6
-httpx==0.27.2
-idna==3.10
-imbalanced-learn==0.12.4
-ipykernel==6.29.5
-ipython==8.28.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.7
-lazy_loader==0.4
-libclang==18.1.1
-librosa==0.10.2.post1
-lightgbm==4.5.0
-livelossplot==0.5.5
-llvmlite==0.43.0
-Markdown==3.7
-MarkupSafe==3.0.1
-matplotlib==3.6.0
-matplotlib-inline==0.1.7
-missingno==0.5.2
-mistune==3.0.2
-msgpack==1.1.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook==7.2.2
-notebook_shim==0.2.4
-numba==0.60.0
-numpy==1.23.5
-oauthlib==3.2.2
-opencv-python==4.10.0.84
-opencv-python-headless==4.10.0.84
-opt_einsum==3.4.0
-overrides==7.7.0
-packaging==24.1
-pandas==1.5.0
-pandocfilters==1.5.1
-parso==0.8.4
-patsy==0.5.6
-pillow==10.4.0
-pip==22.0.4
-platformdirs==4.3.6
-plotly==5.24.1
-pooch==1.8.2
-prometheus_client==0.21.0
-prompt_toolkit==3.0.48
-protobuf==3.19.6
-psutil==6.0.0
-pure_eval==0.2.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydot==3.0.2
-pydub==0.25.1
-Pygments==2.18.0
-pyparsing==3.1.4
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-python-version==0.0.2
-pyts==0.13.0
-pytz==2024.2
-PyWavelets==1.7.0
-pywin32==307
-pywinpty==2.0.13
-PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.35.1
-requests==2.32.3
-requests-oauthlib==2.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.20.0
-rsa==4.9
-scikit-learn==1.5.2
-scipy==1.14.1
-seaborn==0.13.2
-Send2Trash==1.8.3
-setuptools==58.1.0
-six==1.16.0
-sniffio==1.3.1
-soundfile==0.12.1
-soupsieve==2.6
-soxr==0.5.0.post1
-stack-data==0.6.3
-statsmodels==0.14.4
-tenacity==9.0.0
-termcolor==2.5.0
-terminado==0.18.1
-threadpoolctl==3.5.0
-tinycss2==1.3.0
-tomli==2.0.2
-tornado==6.4.1
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20241003
-typing_extensions==4.12.2
-uri-template==1.3.0
-urllib3==2.2.3
-wcwidth==0.2.13
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
-Werkzeug==3.0.4
-wheel==0.44.0
-widgetsnbextension==4.0.13
-wrapt==1.16.0
-xgboost==2.1.1
-xyzservices==2024.9.0
+streamlit==1.35.0
+pandas==2.1.4
+numpy==1.24.3
+matplotlib==3.8.4
+scipy==1.11.4
+scikit-learn==1.3.2
